prometheus-metric-storage/tests/compile_fail/unexpected_param.stderr
error: unexpected parameter
 --> tests/compile_fail/unexpected_param.rs:4:10
  |
4 | #[metric(unknown = "value")]
  |          ^^^^^^^
